[package]
name = "puppet_enc"
authors = ["Chris Sondermeijer <chris.sondermeijer@gmail.com>"]
version = "0.0.1"
edition = "2021"
description = "Puppet External Node Classifier (ENC)"
readme = "README.md"
repository = "https://github.com/sondermc/puppet_enc.git"
homepage = "https://github.com/sondermc/puppet_enc/wiki"
license     = "apache-2.0"

[dependencies]
log = "0.4.22"
env_logger = "0.9.0"
sqlx = { version = "0.8.2", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
futures = "0.3.18"
dotenv = "0.15.0"
serde = "1.0"
serde_yml = "0.0.11"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
